# HabitTracker

./: .gitignore  .gitmodules  HabitTracker.aps  HabitTracker.cpp  HabitTracker.rc  Resource.h
backend/: CMakeLists.txt
backend/cpp/: main.cpp
backend/python/: database.py
database/: schema.sql
